07-CORNIFODD Project = script.js file created -> set the current year in footer copyright in javascript, make mobile navigation work using javascript, fixing flexbox gap propery missing in safari version using javascript code

--- a/07-CORNIFOOD-PROJECT-P1/css/queries.css
+++ b/07-CORNIFOOD-PROJECT-P1/css/queries.css
@@ -139,6 +139,7 @@ instead of using (rem) in media queries we are using (em)
 
   .btn-mobile-nav {
     display: block;
+    z-index: 9999;
   }
 
   .main-nav {
